# ESP-HUB-C3_mini

./: .gitignore  API.md  BACKUP_TIMER.md  CMakeLists.txt  COMMANDS.md  INDEX.md  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c3
Minimum/: platformio.ini
Minimum/src/: config.cpp  config.h  fixture_manager.cpp  fixture_manager.h  main.cpp  mesh_manager.cpp  serial_console.cpp  serial_console.h  stubs.h  web_portal.cpp  web_portal.h  wifi_manager.cpp  wifi_manager.h
components/esp_littlefs/: CMakeLists.txt  Kconfig
src/: ai_agent.cpp  ai_agent.h  ble_manager.cpp  ble_manager.h  can_manager.cpp  can_manager.h  config.cpp  config.h  cron_manager.cpp  cron_manager.h  dns_proxy.cpp  dns_proxy.h  fixture_manager.cpp  fixture_manager.h  gpio_scheduler.cpp  gpio_scheduler.h  http_reporter.cpp  http_reporter.h  main.cpp  mesh_manager.cpp  mesh_manager.h  mqtt_client.cpp  mqtt_client.h  rate_limiter.cpp  rate_limiter.h  sensor_manager.cpp  sensor_manager.h  serial_console.cpp  serial_console.h  system_clock.cpp  system_clock.h  web_portal.cpp  web_portal.cpp_bak  web_portal.h  wifi_manager.cpp  wifi_manager.h
src/sensors/: analog_sensor.h  bh1750_sensor.h  bmp280_sensor.h  can_sensor.h  dht_sensor.h  ds18b20_sensor.h  mh_sensor.h  mhz19_sensor.h  sds011_sensor.h  sensor_base.h  uart_sensor.h
